# driver

./: Cargo.toml
config/: driver.toml
config/prompts/: system.txt
src/: agent.rs  breadcrumbs.rs  config.rs  driver_tools.rs  events.rs  loafs.rs  main.rs  mcp.rs  openai.rs  policy.rs  registry.rs  report.rs  reranker.rs  run.rs  serve.rs  tokens.rs  tools.rs
