[package]
name = "driver"
version = "0.1.0"
edition = "2021"
description = "AIWander driver: consolidated MCP server + universal MCP-aware agent harness with HTTP API"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
globset = "0.4"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
regex = "1"
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.32"
